--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -71,3 +71,4 @@ kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "ko
 
 # dagger
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+hilt-android = { id = "com.google.dagger.hilt.android", version = "2.48" }
